--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf ./dist",
-    "build": "rollup -c",
+    "build": "cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
     "bueno": "^0.1.5",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
@@ -28,5 +34,8 @@
     "bueno": "^0.1.5",
     "svelte": "^3.32.0"
   },
-  "files": ["dist", "src"]
+  "files": [
+    "dist",
+    "src"
+  ]
 }
