:wrench: export declaration file with rollup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,12 @@
     "target": "es2017",
     "importsNotUsedAsValues": "error",
     "isolatedModules": true,
-    "sourceMap": true,
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
+    "declarationMap": true,
     "declarationDir": "./dist"
   },
   "include": ["src"]
