--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "license": "MIT",
   "homepage": "https://github.com/pablo-abc/felte",
   "repository": "github:pablo-abc/felte",
-  "keywords": ["svelte", "forms", "validation"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -22,7 +26,6 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
-    "bueno": "^0.1.5",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
@@ -35,8 +38,9 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "bueno": "^0.1.5",
     "svelte": "^3.32.0"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
