--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rollup": "^2.38.0",
     "svelte": "^3.32.0",
     "tslib": "^2.1.0",
+    "typedoc": "^0.20.20",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
