--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "license": "MIT",
-  "homepage": "https://github.com/pablo-abc/felte",
+  "homepage": "https://felte.berganza.dev",
   "repository": "github:pablo-abc/felte",
   "keywords": [
     "svelte",
@@ -18,7 +18,8 @@
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
-    "prepublish": "yarn build"
+    "prepublishOnly": "yarn build",
+    "build-docs": "yarn node-sass docs-theme/assets/css/main.sass > docs-theme/assets/css/main.css & yarn typedoc"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -39,9 +40,15 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "svelte": "^3.32.0"
+    "svelte": "^3.0.0"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@types/lodash": "^4.14.168",
+    "immer": "^8.0.1",
+    "lodash": "^4.17.20",
+    "rollup-plugin-terser": "^7.0.2"
+  }
 }
