--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "felte",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A form library for Svelte",
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
@@ -41,6 +41,7 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
+    "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.32.0",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
@@ -56,7 +57,6 @@
   "dependencies": {
     "@types/lodash": "^4.14.168",
     "immer": "^8.0.1",
-    "lodash": "^4.17.20",
-    "rollup-plugin-terser": "^7.0.2"
+    "lodash": "^4.17.20"
   }
 }
