--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
   "license": "MIT",
   "homepage": "https://felte.berganza.dev",
   "repository": "github:pablo-abc/felte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation"
-  ],
+  "keywords": ["svelte", "forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "yarn test:ci && yarn build",
     "test:ci": "jest --ci"
   },
   "devDependencies": {
@@ -53,9 +49,7 @@
   "peerDependencies": {
     "svelte": "^3.0.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "immer": "^8.0.1",
     "lodash": "^4.17.20"
