--- a/package.json
+++ b/package.json
@@ -1,30 +1,13 @@
 {
-  "name": "felte",
-  "version": "0.3.1",
-  "description": "A form library for Svelte",
-  "main": "dist/index.js",
-  "browser": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "author": "Pablo Berganza <pablo@berganza.dev>",
-  "license": "MIT",
-  "homepage": "https://felte.berganza.dev",
-  "repository": "github:pablo-abc/felte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation"
-  ],
+  "name": "root",
+  "private": true,
   "scripts": {
-    "prebuild": "rimraf ./dist",
-    "build": "cross-env NODE_ENV=production rollup -c",
-    "dev": "rollup -cw",
-    "prepublishOnly": "yarn test:ci && yarn build",
-    "test:ci": "jest --ci"
+    "docs:build": "lerna exec --scope felte -- typedoc --out ../../docs"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/user-event": "^12.6.3",
@@ -40,23 +23,24 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-testing-library": "^3.10.1",
     "jest": "^26.6.3",
+    "lerna": "^3.22.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.32.0",
+    "tippy.js": "^6.2.7",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
     "typedoc": "^0.20.20",
     "typescript": "^4.1.3"
   },
-  "peerDependencies": {
-    "svelte": "^3.0.0"
-  },
-  "files": [
-    "dist"
-  ],
   "dependencies": {
-    "lodash": "^4.17.20"
+    "@felte/reporter-tippy": "file:packages/reporter-tippy",
+    "felte": "file:packages/felte"
+  },
+  "volta": {
+    "node": "14.15.5",
+    "yarn": "1.22.10"
   }
 }
