--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-tippy",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "An error reporter for Felte using Tippy.js",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -8,7 +8,12 @@
   "types": "dist/index.d.ts",
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -21,6 +26,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "felte": "^0.3.1"
+    "felte": "^0.4.0"
   }
 }
