:green_heart: fix action to work with lerna

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - run: yarn add global lerna
     - run: yarn
-    - run: yarn test:ci
+    - run: lerna bootstrap
+    - run: lerna exec --scope felte -- yarn test:ci
