--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn add global lerna
+    - run: npm i -g lerna
     - run: yarn
     - run: lerna bootstrap
     - run: lerna exec --scope felte -- yarn test:ci
