--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
   "npmClient": "yarn",
-  "packages": ["packages/*"],
-  "version": "independent"
+  "version": "independent",
+  "useWorkspaces": true
 }
