--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "packages:watch": "lerna exec -- yarn dev"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
@@ -24,6 +26,7 @@
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-testing-library": "^3.10.1",
+    "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "prettier": "^2.2.1",
@@ -42,7 +45,9 @@
     "@felte/reporter-tippy": "file:packages/reporter-tippy",
     "felte": "file:packages/felte"
   },
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "volta": {
     "node": "14.15.5",
     "yarn": "1.22.10"
