--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "docs:build": "lerna exec --scope felte -- typedoc --out ../../docs",
     "packages:build": "lerna run build",
-    "packages:watch": "lerna exec -- yarn dev"
+    "packages:watch": "lerna exec -- yarn dev",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -29,6 +32,7 @@
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
+    "pinst": "^2.1.4",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
