build(felte): add categories to typedoc config

--- a/packages/felte/tsconfig.json
+++ b/packages/felte/tsconfig.json
@@ -14,7 +14,8 @@
   },
   "typedocOptions": {
     "entryPoints": ["src/index.ts"],
-    "out": "docs"
+    "out": "docs",
+    "categoryOrder": ["Main", "Helper", "*"]
   },
   "include": ["src"]
 }
