--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -8,12 +8,7 @@
   "types": "dist/index.d.ts",
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -24,5 +19,8 @@
   "peerDependencies": {
     "tippy.js": "^6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
