--- a/packages/reporter-cvapi/package.json
+++ b/packages/reporter-cvapi/package.json
@@ -8,12 +8,7 @@
   "types": "dist/index.d.ts",
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -23,10 +18,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@felte/common": "^0.1.0",
     "lodash": "^4.17.20"
-  },
-  "peerDependencies": {
-    "felte": "^0.4.0"
   },
   "publishConfig": {
     "access": "public"
