--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -8,18 +8,16 @@
   "types": "dist/index.d.ts",
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "yarn build",
     "test:ci": "jest --ci"
+  },
+  "dependencies": {
+    "@felte/common": "^0.1.0"
   },
   "peerDependencies": {
     "tippy.js": "^6.0.0"
