build: update version message

--- a/lerna.json
+++ b/lerna.json
@@ -16,7 +16,7 @@
       "license": "MIT"
     },
     "version": {
-      "message": "chore(release): %s"
+      "message": "chore(release): publish"
     }
   }
 }
