--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,9 +9,7 @@
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "publishConfig": {
     "access": "public"
   },
@@ -28,8 +26,5 @@
   },
   "bugs": {
     "url": "https://github.com/pablo-abc/felte/issues"
-  },
-  "dependencies": {
-    "lodash": "^4.17.20"
   }
 }
