--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,8 +2,8 @@
   "name": "@felte/common",
   "version": "0.1.1",
   "description": "Common utilities for Felte packages",
-  "author": "Pablo Berganza <40573613+pablo-abc@users.noreply.github.com>",
-  "homepage": "https://github.com/pablo-abc/felte#readme",
+  "author": "Pablo Berganza <pablo@berganza.dev>",
+  "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/common",
   "license": "MIT",
   "main": "dist/index.js",
   "browser": "dist/index.js",
