--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -8,12 +8,8 @@
   "types": "dist/index.d.ts",
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-tippy",
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
