--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "docs:build": "lerna exec --scope felte -- typedoc --out ../../docs",
-    "packages:build": "lerna run build",
-    "packages:watch": "lerna exec -- yarn dev",
+    "docs:build": "yarn workspace felte run typedoc --out ../../docs",
+    "packages:build": "yarn workspaces run build",
+    "packages:watch": "yarn workspaces run dev",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable"
@@ -31,7 +31,6 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
-    "lerna": "^3.22.1",
     "pinst": "^2.1.4",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
@@ -44,9 +43,14 @@
     "typedoc": "^0.20.20",
     "typescript": "^4.1.3"
   },
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "volta": {
     "node": "14.15.5",
     "yarn": "1.22.10"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.14.1"
   }
 }
