--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-tippy",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "An error reporter for Felte using Tippy.js",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -9,7 +9,12 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-tippy",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -18,7 +23,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@felte/common": "^0.1.1"
+    "@felte/common": "^0.1.2"
   },
   "peerDependencies": {
     "tippy.js": "^6.0.0"
