--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "docs:build": "yarn workspace felte run typedoc --out ../../docs",
-    "packages:build": "yarn workspaces run build",
-    "packages:watch": "yarn workspaces run dev",
+    "docs:build": "bolt w felte run typedoc --out ../../docs",
+    "build": "bolt ws run build",
+    "dev": "bolt ws run dev",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable"
@@ -36,21 +36,22 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.32.0",
-    "tippy.js": "^6.2.7",
+    "svelte": "^3.0.0",
+    "tippy.js": "^6.0.0",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
     "typedoc": "^0.20.20",
     "typescript": "^4.1.3"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "bolt": {
+    "workspaces": ["packages/*"]
+  },
   "volta": {
     "node": "14.15.5",
     "yarn": "1.22.10"
   },
   "dependencies": {
-    "@changesets/cli": "^2.14.1"
+    "@changesets/cli": "^2.14.1",
+    "lodash": "^4.17.20"
   }
 }
