--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i -g lerna
-    - run: yarn
-    - run: yarn workspaces run build
-    - run: yarn workspace felte run test:ci
+    - run: npm i -g bolt
+    - run: bolt
+    - run: bolt ws run build
+    - run: bolt w felte run test:ci
