feat(reporter-svelte): create package

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "typescript": "^4.1.3"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
@@ -52,6 +54,8 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.14.1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "rollup-plugin-svelte": "^7.1.0",
+    "svelte-preprocess": "^4.6.9"
   }
 }
