--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -9,12 +9,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-dom",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -32,6 +27,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": ["dist", "src"],
   "devDependencies": {
     "rollup-plugin-svelte": "^7.1.0",
     "svelte-preprocess": "^4.6.9"
