--- a/package.json
+++ b/package.json
@@ -44,10 +44,9 @@
     "typescript": "^4.1.3"
   },
   "bolt": {
-    "workspaces": [
-      "packages/*"
-    ]
+    "workspaces": ["packages/*"]
   },
+  "workspaces": ["packages/*"],
   "volta": {
     "node": "14.15.5",
     "yarn": "1.22.10"
