--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
     "typescript": "^4.1.3"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "volta": {
     "node": "14.15.5",
     "yarn": "1.22.10"
@@ -56,5 +60,6 @@
     "lodash": "^4.17.20",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte-preprocess": "^4.6.9"
-  }
+  },
+  "version": "0.0.0"
 }
