--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "bolt ws --parallel run dev",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
+    "publish": "yarn build && yarn changeset publish",
     "postpublish": "pinst --enable"
   },
   "devDependencies": {
