--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "felte",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "A form library for Svelte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -8,7 +8,7 @@
   "types": "dist/index.d.ts",
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "license": "MIT",
-  "homepage": "https://felte.berganza.dev",
+  "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "keywords": [
     "svelte",
