test(reporter-tippy): add tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,10 @@ jobs:
     - run: bolt
     - run: bolt ws run build
     - name: Run tests and generate coverage
-      run: bolt w felte run test:ci
+      run: |
+        bolt w felte run test:ci
+        bolt w @felte/reporter-tippy run test:ci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        directory: ./packages/felte/coverage
+        directory: ./packages
