--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -16,6 +16,7 @@
     "build": "cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "yarn test:ci && yarn build",
+    "test": "jest",
     "test:ci": "jest --ci --coverage"
   },
   "peerDependencies": {
