--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "@rollup/plugin-replace": "^2.3.4",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/svelte": "^3.0.3",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
+    "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-testing-library": "^3.10.1",
@@ -38,6 +41,7 @@
     "rollup": "^2.38.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.0.0",
+    "svelte-jester": "^1.3.0",
     "tippy.js": "^6.0.0",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
@@ -45,7 +49,9 @@
     "typescript": "^4.1.3"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
