--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         bolt w felte run test:ci
         bolt w @felte/reporter-tippy run test:ci
+        bolt w @felte/reporter-svelte run test:ci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
