--- a/packages/reporter-cvapi/package.json
+++ b/packages/reporter-cvapi/package.json
@@ -9,22 +9,21 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-cvapi",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "yarn build",
-    "test:ci": "jest --ci"
+    "test": "jest",
+    "test:ci": "jest --ci --coverage"
   },
   "license": "MIT",
   "dependencies": {
     "@felte/common": "^0.2.0"
+  },
+  "devDependencies": {
+    "felte": "^0.5.2"
   },
   "publishConfig": {
     "access": "public"
