--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -9,12 +9,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-tippy",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -24,7 +19,7 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
-    "@felte/common": "^0.2.0"
+    "@felte/common": "^0.2.1"
   },
   "peerDependencies": {
     "tippy.js": "^6.0.0"
