--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "scripts": {
     "docs:build": "bolt w felte run typedoc --out ../../docs",
+    "test": "bolt ws run test",
+    "test:ci": "bolt ws run test:ci",
     "build": "bolt ws run build",
     "dev": "bolt ws --parallel run dev",
     "postinstall": "husky install",
@@ -49,9 +51,7 @@
     "typescript": "^4.1.3"
   },
   "bolt": {
-    "workspaces": [
-      "packages/*"
-    ]
+    "workspaces": ["packages/*"]
   },
   "volta": {
     "node": "14.15.5",
