--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-svelte3": "^3.1.2",
     "eslint-plugin-testing-library": "^3.10.1",
     "front-matter": "^4.0.2",
     "highlight.js": "^10.7.1",
@@ -66,7 +67,9 @@
     "yup": "^0.32.9"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
