--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
+    "@types/lodash-es": "^4.17.4",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
@@ -47,6 +48,7 @@
     "html-entities": "^2.1.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
+    "lodash": "^4.17.21",
     "mdsvex": "^0.9.0",
     "pinst": "^2.1.4",
     "prettier": "^2.2.1",
@@ -79,7 +81,7 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.14.1",
-    "lodash": "^4.17.20",
+    "lodash-es": "^4.17.21",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte-preprocess": "^4.6.9"
   }
