--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -32,9 +32,14 @@
   ],
   "dependencies": {
     "@felte/common": "^0.2.4",
-    "lodash": "^4.17.20"
+    "lodash-es": "^4.17.21"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.4",
+    "lodash": "^4.17.21",
+    "ts-jest": "^26.5.0"
   }
 }
