--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "@testing-library/svelte": "^3.0.3",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
-    "@types/lodash": "^4.14.168",
-    "@types/lodash-es": "^4.17.4",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
@@ -48,7 +46,6 @@
     "highlight.js": "^10.7.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
-    "lodash": "^4.17.21",
     "mdsvex": "^0.9.0",
     "pinst": "^2.1.4",
     "prettier": "^2.2.1",
@@ -71,7 +68,9 @@
     "zod": "^1.11.13"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
@@ -79,7 +78,6 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.14.1",
-    "lodash-es": "^4.17.21",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte-preprocess": "^4.6.9"
   }
