refactor: mark as side-effect free

--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -6,16 +6,13 @@
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "license": "MIT",
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation"
-  ],
+  "keywords": ["svelte", "forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -27,9 +24,7 @@
   "peerDependencies": {
     "svelte": "^3.31.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@felte/common": "^0.3.4"
   },
