--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -6,15 +6,11 @@
   "svelte": "src/index.js",
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
+  "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-dom",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -33,10 +29,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "devDependencies": {
     "felte": "^0.6.4",
     "rollup-plugin-svelte": "^7.1.0",
