--- a/packages/validator-zod/package.json
+++ b/packages/validator-zod/package.json
@@ -6,16 +6,11 @@
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-zod",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte",
-    "zod"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte", "zod"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
