--- a/packages/reporter-dom/package.json
+++ b/packages/reporter-dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-dom",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "An error reporter for Felte using the DOM",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,7 +10,12 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-dom",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -24,7 +29,7 @@
     "@felte/common": "^0.3.4"
   },
   "devDependencies": {
-    "felte": "^0.6.5"
+    "felte": "^0.6.6"
   },
   "publishConfig": {
     "access": "public"
