--- a/packages/validator-superstruct/package.json
+++ b/packages/validator-superstruct/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/validator-superstruct",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A package to use Superstruct validation with Felte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,7 +10,13 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-superstruct",
-  "keywords": ["svelte", "forms", "validation", "felte", "superstruct"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte",
+    "superstruct"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -24,7 +30,7 @@
     "@felte/common": "^0.3.4"
   },
   "devDependencies": {
-    "felte": "^0.6.5",
+    "felte": "^0.6.6",
     "superstruct": "^0.15.0"
   },
   "peerDependencies": {
