--- a/packages/validator-yup/package.json
+++ b/packages/validator-yup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/validator-yup",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A package to use Yup with Felte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,7 +10,12 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-yup",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -24,7 +29,7 @@
     "@felte/common": "^0.3.4"
   },
   "devDependencies": {
-    "felte": "^0.6.5",
+    "felte": "^0.6.6",
     "yup": "^0.32.9"
   },
   "peerDependencies": {
