--- a/packages/validator-superstruct/package.json
+++ b/packages/validator-superstruct/package.json
@@ -10,13 +10,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-superstruct",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte",
-    "superstruct"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte", "superstruct"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -43,6 +37,7 @@
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
-    }
+    },
+    "./package.json": "./package.json"
   }
 }
