build: use pnpm instead of yarn in prepublish

--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -18,7 +18,7 @@
     "build": "cross-env NODE_ENV=production rollup -c",
     "docs:build": "typedoc --out ../../docs",
     "dev": "rollup -cw",
-    "prepublishOnly": "pnpm test:ci && pnpm build",
+    "prepublishOnly": "pnpm build && pnpm test",
     "test": "jest",
     "test:ci": "jest --ci --coverage"
   },
